Fixed z-index to make button  it appear over other divs

--- a/css/library_btn.css
+++ b/css/library_btn.css
@@ -13,6 +13,7 @@
 	font-size:14pt;
 	color:white;
 	transition:transform 0.6s, opacity 0.6s;
+	z-index: 1;
 }
 
 #search-div .library-button .text
